commented each section

--- a/index.html
+++ b/index.html
@@ -6,13 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Google Analytics Project</title>
     <link rel="stylesheet" href="style.css">
+    <!-- font awesome -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <!-- google fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;1,400&display=swap"
         rel="stylesheet">
 </head>
 
-<body>
+<body> 
+    <!-- NAV BAR -->
     <div class="container">
         <div class="item1">
             <img src="images/goolepics1.svg" alt="">
@@ -25,10 +28,12 @@
             </a>
         </div>
     </div>
+    <!-- SECOND NAV BAR -->
     <div class="container2">
         These courses are about Universal Analytics, which will stop processing data on July 1, 2023. Learn about Google
         Analytics 4, our next-generation measurement solution, <a href=""> with these free courses on Skillshop.</a>
     </div>
+    <!-- FIRST IMAGE SECTION -->
     <div class="grid-container">
         <div class="grid-item1">
             <h1>
@@ -42,7 +47,7 @@
             <!-- <img src="images/firstpics1.jpg" alt=""> -->
         </div>
     </div>
-    <!--  -->
+    <!--SECTION WITH CARDS  -->
     <section class="container3">
         <h2> Analytics Academy Courses</h2>
         <div class="box-item">
@@ -116,7 +121,7 @@
 
         </div>
     </section>
-
+<!-- INSTRUCTOR SECTION -->
     <section class="container5">
         <h1>Meet the Instructors</h1>
         <div class="box2">
@@ -169,6 +174,7 @@
             </div>
         </div>
     </section>
+    <!-- MINI COURSE SECTION -->
     <div class="container6">
         <h2>Analytics Mini-Courses on YouTube </h2>
         <p>For an overview of other Google Marketing Platform Analytics products, check out the Analytics Mini-Courses on YouTube. There you can learn how to create your account; set up your first report, tag, or test; and use Google Analytics for Firebase, Google Tag Manager, Google Optimize, and more.
